[package]
name = "si5351"
version = "0.1.5"
keywords = ["embedded-hal-driver", "clock", "ham-radio"]
categories = ["embedded", "no-std", "hardware-support"]
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>"]
description = "A platform agnostic driver for the Si5351 clock generator"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "0.1"
bitflags = "1.0"
