[package]
name = "si5351"
version = "0.2.0"
keywords = ["embedded", "no-std", "embedded-hal-driver", "clock", "ham-radio"]
categories = ["embedded", "no-std"]
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>"]
description = "A platform agnostic driver for the Si5351 clock generator"
license = "MIT OR Apache-2.0"
exclude = [".travis.yml", ".gitignore"]
repository = "https://github.com/ilya-epifanov/si5351"
edition = "2018"

[badges.travis-ci]
branch = "master"
repository = "jamwaffles/ssd1306"

[dependencies]
embedded-hal = "0.2.2"
bitflags = "1.0"
